<resources>
    <string name="app_name">Fiber Bar App</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu_view">menuViewActivity</string>
    <string name="tab_text_1">Menu</string>
    <string name="tab_text_2">Tapa</string>
    <string name="tab_text_3">Entrepà</string>
    <string name="tab_text_4">Beguda</string>
    <string name="preparing">La seva comanda està sent preparada</string>
    <string name="comanda_realitzada">Comanda Realitzada!</string>
    <string name="navigation_historial">El meu historial</string>
    <string name="navigation_assoliments">Els meus assoliments</string>
    <string name="navigation_alergens">Les meves al·lèrgies</string>
    <string name="navigation_example">Marcos Montero</string>
    <string name="navigation_email">marcos.montero@estudiantat.upc.edu</string>
    <string name="navigation_profile">El meu perfil</string>
    <string name="nav_fiber_bar_name">FIBER BAR</string>
    <string name="nav_example">Marcos Montero</string>
    <string name="nav_email">marcos.montero@estudiantat.upc.edu</string>
    <string name="nav_profile">El meu perfil</string>
    <string name="nav_fiber_points">Fiberpoints: 256</string>
    <string name="nav_cafes">Cafès: 32</string>
    <string name="nav_birres">Birres: 16</string>
</resources>