<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_historial"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/navigation_historial" />
        <item
            android:id="@+id/nav_assoliments"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/navigation_assoliments" />
        <item
            android:id="@+id/nav_alergens"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/navigation_alergens" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/navigation_profile" />
    </group>
</menu>